test/type/wrong/open2.kk.out
test/type/wrong/open2.kk(5,13): error: Invalid type
 type context : test
 type : test
 inferred kind: V -> V
 expected kind: V
 because : extended type must have the same kind as the open type