test/type/wrong/open2.kk
type open test<a> {
  X( x : a )
}
  
type extend test {
  Y
}   